refactor: Generate some DOM elements by JS

--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -35,7 +35,7 @@
 
                 <form>
                   <p class="card-text">
-                    左のキャンバスの中で三点をクリックするか、下のボタンから生成してください。
+                    <b>左の枠の中で三点をクリック</b>するか、<b>下のボタンから生成</b>してください。
                   </p>
                   <div class="pl-3">
                     <p class="form-group row">
@@ -199,267 +199,7 @@
                   この三角形の性質は次のように計算されます
                 </h4>
 
-                <form class="pl-3">
-                  <div class="form-inline row">
-                    <div class="col-xs-2">
-                      <label for="x0i">
-                        <svg id="sampleIncenter">
-                          <circle />
-                        </svg>
-                        内心I:
-                      </label>
-                    </div>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="x0i"
-                        placeholder="x0i"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="y0i"
-                        placeholder="y0i"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <label for="r">内接円の半径　r:</label>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="r"
-                        placeholder="r"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                  </div>
-                  <div class="form-inline row">
-                    <div class="col-xs-2">
-                      <label for="x0O">
-                        <svg id="sampleCircumcenter">
-                          <circle />
-                        </svg>
-                        外心O:
-                      </label>
-                    </div>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="x0O"
-                        placeholder="x0O"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="y0O"
-                        placeholder="y0O"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <label for="R">外接円の半径　R:</label>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="R"
-                        placeholder="R"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                  </div>
-
-                  <div class="form-inline row">
-                    <label for="x0g">
-                      <svg id="sampleCentroid">
-                        <circle />
-                      </svg>
-                      重心G:</label
-                    >
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="x0g"
-                        placeholder="x0g"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="y0g"
-                        placeholder="y0g"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                  </div>
-
-                  <div class="form-inline row">
-                    <label for="x0h">
-                      <svg id="sampleOrthocenter">
-                        <circle />
-                      </svg>
-                      垂心H:</label
-                    >
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="x0h"
-                        placeholder="x0h"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="y0h"
-                        placeholder="y0h"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                  </div>
-
-                  <div class="form-inline row">
-                    <label for="x0ia">
-                      <svg id="sampleExcenterA">
-                        <circle />
-                      </svg>
-                      傍心a:</label
-                    >
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="x0ia"
-                        placeholder="x0ia"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="y0ia"
-                        placeholder="y0ia"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <label for="ra">傍心円の半径　ra:</label>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="ra"
-                        placeholder="ra"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                  </div>
-                  <div class="form-inline row">
-                    <label for="x0ib">
-                      <svg id="sampleExcenterB">
-                        <circle />
-                      </svg>
-                      傍心b:</label
-                    >
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="x0ib"
-                        placeholder="x0ib"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="y0ib"
-                        placeholder="y0ib"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <label for="rb">傍心円の半径　rb:</label>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="rb"
-                        placeholder="rb"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                  </div>
-                  <div class="form-inline row">
-                    <label for="x0ic">
-                      <svg id="sampleExcenterC">
-                        <circle />
-                      </svg>
-                      傍心c:</label
-                    >
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="x0ic"
-                        placeholder="x0ic"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="y0ic"
-                        placeholder="y0ic"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                    <label for="rc">傍心円の半径　rc:</label>
-
-                    <div class="col-xs-2">
-                      <input
-                        type="text"
-                        id="rc"
-                        placeholder="rc"
-                        size="4"
-                        class="form-control"
-                        disabled
-                      />
-                    </div>
-                  </div>
-
+                <form class="pl-3" id="props">
                   <div class="form-inline row">
                     <label for="c">辺ABの長さ:</label>
                     <div class="col-xs-2">
