refactor: Add shadow to the cards

--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -28,9 +28,9 @@
         </div>
         <div class="col-md-6 px-3 py-3">
           <div id="controls">
-            <div class="card mb-3">
+            <div class="card mb-3 shadow">
               <div class="card-body">
-                <h4 class="card-title">三角形のかたちをきめる</h4>
+                <h5 class="card-title">三角形のかたちをきめる</h5>
 
                 <form>
                   <p class="card-text">
@@ -193,19 +193,19 @@
                 </form>
               </div>
             </div>
-            <div class="card mb-3">
+            <div class="card mb-3 shadow">
               <div class="card-body">
-                <h4 class="card-title">
+                <h5 class="card-title">
                   この三角形の性質を計算できます
-                </h4>
+                </h5>
                 <form class="pl-3" id="props"></form>
               </div>
             </div>
           </div>
           <div id="hints">
-            <div class="card mb-3">
+            <div class="card mb-3 shadow">
               <div class="card-body">
-                <h4 class="card-title">五心は次のように定義されます</h4>
+                <h5 class="card-title">五心は次のように定義されます</h5>
                 <ul class="list-group">
                   <li class="list-group-item">
                     重心は、３つの辺の<b>中線（頂点と辺の中点を結ぶ線）</b>の交点です。
@@ -225,9 +225,9 @@
                 </ul>
               </div>
             </div>
-            <div class="card mb-3">
+            <div class="card mb-3 shadow">
               <div class="card-body">
-                <h4 class="card-title">観察すると次のことがわかります</h4>
+                <h5 class="card-title">観察すると次のことがわかります</h5>
                 <ul class="list-group">
                   <li class="list-group-item">
                     重心は、<b>中線を２：１に分離</b>します。
