--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body onload="setVertices('random')">
+  <body onload="setVertices('random')" onresize="updateCanvasSize(); drawByFormValues();">
     <div id="wrapper" class="container-fluid">
       <div class="row">
         <div
