--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -20,7 +20,7 @@
       <div class="row">
         <div
           id="canvas_wrapper"
-          class="col-md-6 pl-0 pr-0"
+          class="col-md-6 pl-0 pr-0 ml-0 mr-0"
         >
           <canvas id="canvasArea">
             Canvas not supported.
